<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/app_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/settings_item_quality"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="?listPreferredItemHeight">

                <TextView
                    android:text="@string/current_version"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_baseline_version" />

                <TextView
                    android:textSize="17sp"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_0"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <View
                android:background="?colorSurfaceVariant"
                android:layout_width="match_parent"
                android:layout_height="0.8dp" />

            <LinearLayout
                android:id="@+id/settings_item_night_mode"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="?listPreferredItemHeight">

                <TextView
                    android:text="@string/night_mode_on"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_baseline_night" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/nightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true" />

            </LinearLayout>

            <View
                android:background="?colorSurfaceVariant"
                android:layout_width="match_parent"
                android:layout_height="0.8dp" />

            <LinearLayout
                android:id="@+id/settings_item_favorite_icon"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="?listPreferredItemHeight">

                <TextView
                    android:text="@string/show_recipe_grid_mode"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_nav_download" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/gridMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:background="?colorSurfaceVariant"
                android:layout_width="match_parent"
                android:layout_height="0.8dp" />

            <LinearLayout
                android:id="@+id/settings_item_notification"
                android:layout_width="match_parent"
                android:gravity="center|start"
                android:layout_height="?listPreferredItemHeight">

                <TextView
                    android:text="@string/push_notification"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_baseline_notifications"  />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/pushNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true" />

            </LinearLayout>

            <View
                android:background="?colorSurfaceVariant"
                android:layout_width="match_parent"
                android:layout_height="0.8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usage_rights_app_info"
                    style="@style/TextAppearance.AppCompat.Small" />

                <View
                    android:layout_gravity="center"
                    android:background="#b7b7b7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:gravity="center|start"
                android:layout_height="?listPreferredItemHeight">


                <TextView
                    android:text="@string/menu_policy"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_baseline_flag"  />
            </LinearLayout>

            <View
                android:background="?colorSurfaceVariant"
                android:layout_width="match_parent"
                android:layout_height="0.8dp" />

            <LinearLayout
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:gravity="center|start"
                android:layout_height="?listPreferredItemHeight">

                <TextView
                    android:text="@string/menu_about"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_baseline_info"  />
            </LinearLayout>

            <View
                android:background="?colorSurfaceVariant"
                android:layout_width="match_parent"
                android:layout_height="0.8dp" />

            <LinearLayout
                android:id="@+id/shareApp"
                android:layout_width="match_parent"
                android:gravity="center|start"
                android:layout_height="?listPreferredItemHeight">


                <TextView
                    android:text="@string/menu_share"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                    android:drawablePadding="10sp"
                    app:drawableStartCompat="@drawable/ic_baseline_share"  />


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>